[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/battle/battle_scene.gd" id="1"]

[node name="BattleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 5

[node name="BattleArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EnemySprite" type="TextureRect" parent="BattleArea"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_top = 48.0
offset_right = 180.0
offset_bottom = 408.0
grow_horizontal = 2
expand_mode = 1

[node name="PlayerSprite" type="TextureRect" parent="BattleArea"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -460.0
offset_right = 180.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
expand_mode = 1

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="EnemyInfo" type="PanelContainer" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -520.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = 248.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/EnemyInfo"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="EnemyName" type="Label" parent="UI/EnemyInfo/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Enemy"

[node name="EnemyLevel" type="Label" parent="UI/EnemyInfo/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Lv. 1"

[node name="EnemyHPBar" type="ProgressBar" parent="UI/EnemyInfo/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
max_value = 1.0
value = 1.0
show_percentage = false

[node name="EnemyHPLabel" type="Label" parent="UI/EnemyInfo/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "HP: 1/1"

[node name="PlayerInfo" type="PanelContainer" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -248.0
offset_right = 516.0
offset_bottom = -24.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PlayerInfo"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PlayerName" type="Label" parent="UI/PlayerInfo/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Your Soul"

[node name="PlayerLevel" type="Label" parent="UI/PlayerInfo/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Lv. 1"

[node name="PlayerHPBar" type="ProgressBar" parent="UI/PlayerInfo/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
max_value = 1.0
value = 1.0
show_percentage = false

[node name="PlayerHPLabel" type="Label" parent="UI/PlayerInfo/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "HP: 1/1"

[node name="BattleMenu" type="PanelContainer" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -520.0
offset_top = -320.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/BattleMenu"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="AttackButton" type="Button" parent="UI/BattleMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "‚öîÔ∏è Attack"

[node name="RunButton" type="Button" parent="UI/BattleMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "üèÉ Run"

[node name="MessageBox" type="PanelContainer" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -520.0
offset_top = -220.0
offset_right = 520.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0

[node name="MessageLabel" type="Label" parent="UI/MessageBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "A random battle appeared!"
autowrap_mode = 2
